--- a/testing_CV.Rmd
+++ b/testing_CV.Rmd
@@ -269,6 +269,8 @@ Camden & Islington NHS Foundation Trust\
 -   2024 Editor's Choice Prize for our paper with Dr Foulkes "Do No
     Harm: Can School Mental Health Interventions Cause Iatrogenic Harm."
     BJPsych Bulletin.
+-   2023 World Top 2% scientist according to Stanford-Elsevier rankings
+-   2022 World Top 2% scientist according to Stanford-Elsevier rankings
 -   2022 Highly Cited Researcher Clarivate Analytics
 -   2021 Open Neuro Hall of Fame, tied 2nd Place for contributing
     datasets
